[gd_scene load_steps=4 format=2]

[ext_resource path="res://grid/precision/GridPrecision.tscn" type="PackedScene" id=1]
[ext_resource path="res://grid/precision/GridPrecisionTime.gd" type="Script" id=2]
[ext_resource path="res://ui/RetryButton.tscn" type="PackedScene" id=3]

[node name="GridPrecisionTime" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="SessionPanelFreeplay" parent="HBoxContainer/VBoxContainer/HBoxContainer/Toolbar/VBoxContainer" index="0"]
visible = false

[node name="TargetLabel" parent="TopBar" index="0"]
visible = false

[node name="ClickCountLabel" parent="TopBar" index="1"]
margin_left = 0.0
margin_right = 0.0
size_flags_horizontal = 10

[node name="TimeLabel" parent="TopBar" index="2"]
visible = true
margin_left = 4.0
margin_right = 4.0

[node name="CenterOverlay" parent="." index="2"]
margin_right = 669.0
margin_bottom = 369.0

[node name="Countdown" parent="CenterOverlay" index="0"]
margin_right = 160.0

[node name="RetryButton" parent="CenterOverlay" index="1" instance=ExtResource( 3 )]
margin_top = 20.0
margin_right = 160.0
margin_bottom = 52.0
size_flags_horizontal = 6
size_flags_vertical = 6
[connection signal="pressed" from="CenterOverlay/RetryButton" to="." method="_on_RetryButton_pressed"]
